[gd_scene load_steps=4 format=3 uid="uid://di8w83aed2abp"]

[ext_resource type="Texture2D" uid="uid://cnwmm4cak1pbn" path="res://Assets/CardImages/madra.png" id="1_13l2o"]
[ext_resource type="Script" path="res://Scenes/word_meaning_display.gd" id="1_v3an3"]
[ext_resource type="Texture2D" uid="uid://p4dad23w67q7" path="res://Assets/Card/card_background.jpeg" id="2_yiqjx"]

[node name="WordMeaningDisplay" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v3an3")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(10000, 10000)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yiqjx")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -492.0
offset_top = -391.0
offset_right = 492.0
offset_bottom = 391.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IrishWord" type="Label" parent="VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 68
text = "test"

[node name="Control2" type="Control" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WordImage" type="Sprite2D" parent="VBoxContainer"]
unique_name_in_owner = true
position = Vector2(474, 370)
scale = Vector2(0.449219, 0.4375)
texture = ExtResource("1_13l2o")

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WordTranslation" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 68
text = "Meaning:"

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "OK"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
